--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <li><a href="#About">About</a></li>
                 <li><a href="#Featured">Featured</a></li>
                 <li><a href="#Blog">Blog</a></li>
-                <li><a href="form.html">Contact Us</a></li>
+                <li><a href="login.html">connect</a></li>
+                <li><a href="signup.html">Join</a></li>
             </ul>
 
             <div class="social_icon">
