--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
    <!--About-->
 
-   <div class="about">
+   <div id="About" class="about">
 
     <div class="about_image">
         <img src="image/about-us.jpg">
@@ -264,7 +264,7 @@
                     <p class="writer">Robert Greene</p>
                     <div class="categories">Self-help book</div>
                     <p class="book_price">$15</p>
-                    <a href="https://openlibrary.org/works/OL1968368W/The_48_Laws_of_Power" class="f_btn">Read More</a>
+                    <a href="#" class="f_btn">Read More</a>
                 </div>               
 
             </div>
@@ -656,7 +656,7 @@
 
     <!--Blog-->
     
-    <div class="blog">
+    <div id="Blog" class="blog">
         <h1>Our Blog</h1>
         <div class="blog_box">
 
