--- a/index.html
+++ b/index.html
@@ -774,19 +774,11 @@
 
             </div>
 
-            <div class="tag">
-                <h1>Quick Link</h1>
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Featured</a>
-                <a href="#">Arrivals</a>
-                <a href="#">Blog</a>
-            </div>
 
             <div class="tag">
                 <h1>Contact Info</h1>
-                <a href="#"><i class="fa-solid fa-phone"></i>+94 12 345 6789</a>
-                <a href="#"><i class="fa-solid fa-phone"></i>+94 32 444 699</a>
+                <a href="#"><i class="fa-solid fa-phone"></i>+22 33 44 5555</a>
+                <a href="#"><i class="fa-solid fa-phone"></i>+33 55 66 8888</a>
                 <a href="#"><i class="fa-solid fa-envelope"></i>BookVerse123@gmail.com</a>
                 
             </div>
@@ -812,7 +804,7 @@
             
         </div>
 
-        <p class="end">Design By<span><i class="fa-solid fa-face-grin"></i>Raigner Stark</span></p>
+        <p class="end">Design By<span>Avinash, Udit, Palak</span></p>
 
     </footer>
 
@@ -822,8 +814,5 @@
 
     <!-- Optional JavaScript; choose one of the two! -->
     <script src="script.js"></script>
-
-
-    <!-- <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script> -->
 </body>
 </html>
