--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
             
         </div>
 
-        <p class="end">Design By<span>Avinash, Udit, Palak</span></p>
+        <p class="end">Design By<span>Avinash</span></p>
 
     </footer>
 
